--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/gradle.xml
+/.idea/tasks.xml
 /.idea/assetWizardSettings.xml
+/.idea/sonarlint
 .DS_Store
 /build
 /captures
